<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/glowny"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/imie_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imie" />

            <EditText
                android:id="@+id/imie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Wpisz imie" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nazwisko_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nazwisko" />

            <EditText
                android:id="@+id/nazwisko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Wpisz nazwisko"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_ocen_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_ocen" />

            <EditText
                android:id="@+id/ocena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Wpisz ocene(5-15)" />

        </LinearLayout>

        <Button
            android:id="@+id/oceny_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Oceny"
            android:visibility="visible" />

        <TextView
            android:id="@+id/fokus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>